--- a/index.html
+++ b/index.html
@@ -75,6 +75,54 @@
 <p align="text-gray size-mini">Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordinary.</p>
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Embroidered lace three-dimensi···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Hand sewn embroidery, three-di···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Embroidered lace colored fabri···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Embroidered lace fabric with t···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Embroidered clothing accessori···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="flex-grow">Original horse face skirt, org···<br /><span class="text-main">Read More</span></p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="img-auto scale" /></figure>
@@ -147,45 +195,18 @@
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
         <p class="flex-grow">Embroidered fabric featuring a···<br /><span class="text-main">Read More</span></p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="flex-grow">Embroidered clothing accessori···<br /><span class="text-main">Read More</span></p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="flex-grow">Embroidered lace colored fabri···<br /><span class="text-main">Read More</span></p>
-      </a>
     </div>
   </div>
 </div>
 <div class="layout grid-large isplit scrollto">
 <h3 align="center">New </h3>
   <div class="grid documents">
-    <a class="big-x4" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
-      <strong>Chinese embroidery with a long history has been an important···</strong>
-      <p>Chinese embroidery with a long history has been an important part of··· <sup>2018-04-12</sup><br />Read More</p>
-    </a>
-    <a class="big-x4" href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
-      <strong>Chinese embroidery has four major traditional styles: Su, Sh···</strong>
-      <p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang··· <sup>2018-04-12</sup><br />Read More</p>
-    </a>
   </div>
 </div>
 <div class="layout grid-large isplit scrollto">
     <h3 align="center">Help</h3>
   <p align="center"> </p>
   <div class="grid documents">
-    <a class="big-x4" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
-      <strong>Chinese traditional embroidery craft, arts and culture in a unique ancie···<sup>2018-04-12</sup><br />Read More</strong>
-    </a>
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
