--- a/q/10.html
+++ b/q/10.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories-Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
-<meta property="og:release_date" content="2018-04-12 10:23:07"/>
+<meta property="og:release_date" content="2024-07-01 11:51:48"/>
 <meta property="og:title" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/>
 <meta property="og:description" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/>
 <meta property="og:product:price" content="12.99"/>
@@ -54,7 +54,7 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/sewing/">Sewing Products</a> <i class="icon-arrow-right"></i> <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -71,102 +71,109 @@
     </div>
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories<sup class="badge">$:12.99</sup></h3>
-        <time>2018-04-12</time>
+        <time>2024-07-01</time>
 		<p>Number: A10</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/></p>
   <p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576587845466.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576587845466.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576606814069.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576606814069.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576606814069.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576606814069.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576609289037.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576609289037.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576609289037.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576609289037.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-1</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576631710830.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576631710830.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576631710830.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576631710830.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-2</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576633543829.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576633543829.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576633543829.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576633543829.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-3</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576635103873.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576635103873.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576635103873.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576635103873.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-4</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576645350825.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576645350825.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576645350825.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576645350825.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-5</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576648212779.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576648212779.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576648212779.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576648212779.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-6</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576652572016.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576652572016.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576652572016.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576652572016.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-7</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576656575737.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576656575737.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576656575737.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576656575737.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-8</p>
       </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576659935990.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576659935990.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow"></p>
+      </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
-            <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
+            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
-            <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">Read More</a></div>
+            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
           </div>
         </div>
         
