--- a/q/14.html
+++ b/q/14.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.-Video-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
-<meta name="description" content="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.">
+<meta name="description" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
-<meta property="og:release_date" content="2018-04-12 10:26:28"/>
-<meta property="og:title" content="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world."/>
-<meta property="og:description" content="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world."/>
-<meta property="og:product:price" content="{content:ext_price}"/>
+<meta property="og:release_date" content="2024-07-01 11:47:46"/>
+<meta property="og:title" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/>
+<meta property="og:description" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/>
+<meta property="og:product:price" content="29.99"/>
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -45,7 +45,7 @@
 <br />
 
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h1 class="margin-bottom weight" align="center">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h1>
+  <h1 class="margin-bottom weight" align="center">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</h1>
   <p align="center"></p>
     <p align="center"><span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span>
@@ -54,39 +54,80 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/video/">Video</a> <i class="icon-arrow-right"></i> <a href="/q/14.html">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240626/1719389747296309.webp" alt="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world." class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</strong>
+        <strong class="weight-small">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</strong>
         <p class="size-small"></p>
       </a>
 	 
     </div>
     <div class="big-x8">
-	<h3 class="margin-bottom weight" align="center">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.<sup class="badge">$:{content:ext_price}</sup></h3>
-        <time>2018-04-12</time>
+	<h3 class="margin-bottom weight" align="center">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder<sup class="badge">$:29.99</sup></h3>
+        <time>2024-07-01</time>
 		<p>Number: A14</p> 
-		<p><a class="padding block" href="{content:ext_paypal}" target="_blank"> <img src="/q/py.webp" alt="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world." /> Buy Now <span class="text-danger">&#36;</span>:{content:ext_price}</sup></a></p>
-  <p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="/q/a.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/></p>
+  <p>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719805685113949.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719805685113949.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749310038.jpg">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749310038.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749284150.jpg">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749284150.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749667374.jpg">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749667374.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749337888.jpg">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749337888.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
+      </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">Read More</a></div>
+          </div>
+        </div>
         
       </div>
     </div>
