--- a/q/17.html
+++ b/q/17.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.-Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.Pattern: Peony FlowerBackside Process：No adhesiveSize：35cmx15cm">
 <meta name="theme-color" content="#32CD32">
@@ -54,7 +54,7 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/sewing/">Sewing Products</a> <i class="icon-arrow-right"></i> <a href="/q/17.html">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/17.html">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,48 +73,54 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.<sup class="badge">$:12.99</sup></h3>
         <time>2018-04-12</time>
 		<p>Number: A17</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery."/></p>
   <p>Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</p><p><br/></p><p>Pattern: Peony Flower</p><p>Backside Process：No adhesive</p><p>Size：35cmx15cm<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240629/1719629797900540.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629797900540.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629797900540.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629797900540.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Peony Flower</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240629/1719629855566906.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629855566906.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855566906.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855566906.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Peony Flower</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240629/1719629855705374.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629855705374.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855705374.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855705374.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240629/1719629855864728.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629855864728.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855864728.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855864728.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
+          </div>
+        </div>
         <div class="small-x2">
           <div class="card">
             <img loading="lazy" src="/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
@@ -131,12 +137,6 @@
           <div class="card">
             <img loading="lazy" src="/q/upload/other/20240701/1719800181983602.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">Read More</a></div>
-          </div>
-        </div>
-        <div class="small-x2">
-          <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
-            <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">Read More</a></div>
           </div>
         </div>
         
