--- a/q/8.html
+++ b/q/8.html
@@ -5,12 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.-Order dynamics-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
-<meta name="description" content="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.">
+<meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers">
 <meta name="theme-color" content="#32CD32">
-<meta property="og:type" content="article"/>
-<meta property="og:release_date" content="2018-04-12 10:10:18"/>
+<meta property="og:type" content="product"/>
+<meta property="og:release_date" content="2024-07-01 15:18:27"/>
+<meta property="og:title" content="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers"/>
+<meta property="og:description" content="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers"/>
+<meta property="og:product:price" content="12.99"/>
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -42,37 +45,173 @@
 <br />
 
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h1 class="margin-bottom weight" align="center">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h1>
-   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/article/">Blog</a> <i class="icon-arrow-right"></i> <a href="/q/order/">Order dynamics</a> <i class="icon-arrow-right"></i> <a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a>
+  <h1 class="margin-bottom weight" align="center">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</h1>
+  <p align="center"></p>
+    <p align="center"><span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span>
+    <span class="text-danger size-large">&#9733;</span></p>
+  
+  <ul class="bread">
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/8.html">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.<sup> </sup></strong>
+        <strong class="weight-small">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</strong>
         <p class="size-small"></p>
-        </a>
+      </a>
+	 
     </div>
     <div class="big-x8">
-        <time>2018-04-12</time>
-  <p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p>
-
+	<h3 class="margin-bottom weight" align="center">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers<sup class="badge">$:12.99</sup></h3>
+        <time>2024-07-01</time>
+		<p>Number: A8</p> 
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers"/></p>
+  <p>Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</p>
   </div> 
   </div>
-  
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820142909310.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820142909310.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow"></p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820142867508.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820142867508.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow"></p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820142192546.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820142192546.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow"></p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820142627969.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820142627969.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow"></p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148468509.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148468509.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-1</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148415017.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148415017.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-2</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148928790.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148928790.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-3</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148540864.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148540864.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-4</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148655115.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148655115.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-5</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148841630.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148841630.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-6</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820148694865.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820148694865.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-7</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820149583730.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820149583730.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-8</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719820149949314.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719820149949314.webp" alt="Flower" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">S/N: A8-9</p>
+      </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
+    <div class="grid-middle">
+      <div class="grid">
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">Read More</a></div>
+          </div>
+        </div>
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719819186655198.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">Read More</a></div>
+          </div>
+        </div>
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719806402155946.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">Read More</a></div>
+          </div>
+        </div>
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
+          </div>
+        </div>
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
   <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
 <script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
