--- a/q/gbook/index.html
+++ b/q/gbook/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-Hans-CN">
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,6 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-07-01">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -41,21 +40,13 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">13</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">在线留言</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
-    <div class="big-x12 grid discovers">{pboot:list num=12 order=isrecommend}
-      <a class="big-x3 flex flex-column" href="[list:link]" title="[list:title],[list:date]">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="[list:ico]"  alt="[list:title]" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">[list:title len=26]<sup>[list:ext_price]</sup></strong>
-        <p class="size-small flex-grow">[list:content drophtml=1 dropblank=1 len=60]</p>
-      </a>{/pboot:list}
+    <div class="big-x12 grid discovers">
     </div>
   </div>
     <ul class="nav nav-page nav-divider">
