--- a/q/13.html
+++ b/q/13.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Embroidery flower bud lace flower applique-Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Embroidery flower bud lace flower applique-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Embroidery flower bud lace flower applique size: 30cm * 25cmgum : None, sewing is requiredcolor :This whitematerail :polyester yarn">
 <meta name="theme-color" content="#32CD32">
@@ -54,7 +54,7 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/sewing/">Sewing Products</a> <i class="icon-arrow-right"></i> <a href="/q/13.html">Embroidery flower bud lace flower applique</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/13.html">Embroidery flower bud lace flower applique</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,52 +73,52 @@
 	<h3 class="margin-bottom weight" align="center">Embroidery flower bud lace flower applique<sup class="badge">$:13.99</sup></h3>
         <time>2024-06-10</time>
 		<p>Number: A13</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="/q/py.webp" alt="Embroidery flower bud lace flower applique" /> Buy Now <span class="text-danger">&#36;</span>:13.99</sup></a></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="/q/py.webp" alt="Embroidery flower bud lace flower applique" /> Buy Now <span class="text-danger">&#36;</span>:13.99</sup></a><img src="/q/a.webp" alt="Embroidery flower bud lace flower applique"/></p>
   <p>Embroidery flower bud lace flower applique <br/></p><p>size: 30cm * 25cm</p><p>gum : None, sewing is required</p><p>color :&nbsp;This white</p><p>materail :&nbsp;polyester yarn</p><p><br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719390770601289.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390770601289.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390770601289.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390770601289.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719390785541558.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390785541558.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390785541558.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390785541558.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719390867604008.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390867604008.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867604008.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867604008.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719390867142653.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390867142653.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867142653.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867142653.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719390867968414.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390867968414.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867968414.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867968414.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
