--- a/q/18.html
+++ b/q/18.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing-Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothesMaterial: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on)Size: Approx.full 18cm width x 43cm l">
 <meta name="theme-color" content="#32CD32">
@@ -54,7 +54,7 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/sewing/">Sewing Products</a> <i class="icon-arrow-right"></i> <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,7 +73,7 @@
 	<h3 class="margin-bottom weight" align="center">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing<sup class="badge">$:12.99</sup></h3>
         <time>2024-06-10</time>
 		<p>Number: A18</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="/q/py.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="/q/py.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing"/></p>
   <p>It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothes
 
 Material: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on)
@@ -86,24 +86,24 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719391194190860.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719391194190860.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719391197157726.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719391197157726.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391197157726.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391197157726.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
