--- a/q/20.html
+++ b/q/20.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Skull cloth patch-Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Skull cloth patch-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Your clothes can be so gorgeous">
 <meta name="theme-color" content="#32CD32">
@@ -54,7 +54,7 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/sewing/">Sewing Products</a> <i class="icon-arrow-right"></i> <a href="/q/20.html">Skull cloth patch</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/animal/">Animal</a> <i class="icon-arrow-right"></i> <a href="/q/20.html">Skull cloth patch</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,38 +73,38 @@
 	<h3 class="margin-bottom weight" align="center">Skull cloth patch<sup class="badge">$:12</sup></h3>
         <time>2024-06-10</time>
 		<p>Number: A20</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"> <img src="/q/py.webp" alt="Skull cloth patch" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"> <img src="/q/py.webp" alt="Skull cloth patch" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="/q/a.webp" alt="Skull cloth patch"/></p>
   <p>Your clothes can be so gorgeous &nbsp; <br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719391022657043.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719391022657043.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391022657043.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391022657043.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Your clothes can be so gorgeous</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719391026119535.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719391026119535.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391026119535.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391026119535.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719391028653581.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719391028653581.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391028653581.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391028653581.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Your clothes</p>
       </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="javascript:;"> </a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
