--- a/q/22.html
+++ b/q/22.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set-Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set">
 <meta name="theme-color" content="#32CD32">
@@ -54,7 +54,7 @@
     <span class="text-danger size-large">&#9733;</span></p>
   
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/sewing/">Sewing Products</a> <i class="icon-arrow-right"></i> <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a>
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,87 +73,87 @@
 	<h3 class="margin-bottom weight" align="center">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set<sup class="badge">$:12</sup></h3>
         <time>2024-06-02</time>
 		<p>Number: A22</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="/q/py.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="/q/py.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="/q/a.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set"/></p>
   <p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="/q/upload/other/20240626/1719390299785042.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390299785042.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390299785042.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390299785042.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Plum Water Soluble</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835286604845.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286604845.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286604845.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286604845.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-2</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835286258353.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286258353.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286258353.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286258353.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-3</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835286161825.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286161825.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286161825.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286161825.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-4</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835286958424.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286958424.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286958424.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286958424.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-5</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835286322972.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286322972.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286322972.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286322972.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-6</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835364808371.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835364808371.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364808371.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364808371.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-7</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835364279941.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835364279941.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364279941.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364279941.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-8</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835364677527.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835364677527.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364677527.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364677527.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-9</p>
       </a>
-      <a class="big-x4 flex flex-column" href="/q/upload/image/20201016/1602835379533190.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835379533190.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835379533190.jpg" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835379533190.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-1</p>
       </a>
     </div>
   </div>
-<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>Next：<a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
