--- a/q/article/index.html
+++ b/q/article/index.html
@@ -40,7 +40,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/order/" title="Order dynamics">Order dynamics <span class="badge">2</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/order/" title="Order dynamics">Order dynamics <span class="badge">0</span></a></div> 
     </div>
 </div>  
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
@@ -49,41 +49,16 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390770601289.webp"  alt="Chinese embroidery with a lo···" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">Chinese embroidery with a lo···<sup>+</sup></strong>
-        <p class="flex-grow">Chinese embroidery with a long history has been an important part ···<time>2018-04-12</time></p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg"  alt="Chinese embroidery has four ···" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">Chinese embroidery has four ···<sup>+</sup></strong>
-        <p class="flex-grow">Chinese embroidery has four major traditional styles: Su, Shu, Xia···<time>2018-04-12</time></p>
-      </a>
     </div>
   </div>
 </div>
 
 <div class="layout grid-large isplit scrollto">
   <div class="grid documents">
-    <a class="big-x4" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
-      <strong>Chinese embroidery with a long history has been an important part of the···<sup>2018-04-12</sup></strong>
-    </a>
-    <a class="big-x4" href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
-      <strong>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, an···<sup>2018-04-12</sup></strong>
-    </a>
   </div>
 </div>
 
-    <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous page</a></li>
-      <li><a href="javascript:;">Next page</a></li>
-    </ul>
+   	<div>No data found!</div>
   
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
