--- a/q/job/index.html
+++ b/q/job/index.html
@@ -41,7 +41,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">13</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
@@ -52,7 +52,7 @@
   </div>
     <ul class="nav nav-page nav-divider">
       <li><a href="javascript:;">Previous</a></li>
-      <li><a href="javascript:;">Next</a></li>
+      <li><a href="/q/job_2/">Next</a></li>
     </ul>
   
 </div>
