--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -40,13 +40,61 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">11</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">13</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719821466380643.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Embroidered lace three-dimensional fabric with ethnic denim ··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719819186655198.webp"  alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Hand sewn embroidery, three-dimensional embroidery, flower f··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759342917874.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Embroidered lace colored fabric with ethnic denim fabric pat··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719806402155946.webp"  alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered lace fabric with three-dimensional spot flower p··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759794881169.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered clothing accessories, embroidered lace fabric, e··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719805636338260.webp"  alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Original horse face skirt, organza embroidery piece, cheongs··· <br />Read More</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719794556332881.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
@@ -118,22 +166,6 @@
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
         <p class="size-small flex-grow">Embroidered fabric featuring a peony-colored floral pattern,··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759794881169.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Embroidered clothing accessories, embroidered lace fabric, e··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759342917874.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="size-small flex-grow">Embroidered lace colored fabric with ethnic denim fabric pat··· <br />Read More</p>
       </a>
     </div>
   </div>
